[gd_scene load_steps=56 format=2]

[ext_resource path="res://recursos/botones/once-up.png" type="Texture" id=1]
[ext_resource path="res://recursos/botones/siete-up.png" type="Texture" id=2]
[ext_resource path="res://recursos/botones/tres-down.png" type="Texture" id=3]
[ext_resource path="res://recursos/botones/nueve-up.png" type="Texture" id=4]
[ext_resource path="res://recursos/botones/diez-down.png" type="Texture" id=5]
[ext_resource path="res://recursos/botones/doce-down.png" type="Texture" id=6]
[ext_resource path="res://recursos/botones/cuatro-down.png" type="Texture" id=7]
[ext_resource path="res://recursos/botones/diez-up.png" type="Texture" id=8]
[ext_resource path="res://recursos/botones/trece-up.png" type="Texture" id=9]
[ext_resource path="res://recursos/botones/catorce-up.png" type="Texture" id=10]
[ext_resource path="res://recursos/botones/quince-down.png" type="Texture" id=11]
[ext_resource path="res://recursos/botones/dieciseis-down.png" type="Texture" id=12]
[ext_resource path="res://recursos/botones/dieciseis-up.png" type="Texture" id=13]
[ext_resource path="res://recursos/botones/cinco-up.png" type="Texture" id=14]
[ext_resource path="res://recursos/botones/tres-up.png" type="Texture" id=15]
[ext_resource path="res://recursos/botones/ocho-down.png" type="Texture" id=16]
[ext_resource path="res://recursos/botones/cuatro-up.png" type="Texture" id=17]
[ext_resource path="res://recursos/botones/seis-down.png" type="Texture" id=18]
[ext_resource path="res://recursos/botones/doce-up.png" type="Texture" id=19]
[ext_resource path="res://recursos/botones/catorce-down.png" type="Texture" id=20]
[ext_resource path="res://recursos/botones/cinco-down.png" type="Texture" id=21]
[ext_resource path="res://recursos/botones/siete-down.png" type="Texture" id=22]
[ext_resource path="res://recursos/botones/trece-down.png" type="Texture" id=23]
[ext_resource path="res://recursos/botones/quince-up.png" type="Texture" id=24]
[ext_resource path="res://recursos/botones/diecisiete-down.png" type="Texture" id=25]
[ext_resource path="res://recursos/botones/ocho-up.png" type="Texture" id=26]
[ext_resource path="res://recursos/botones/seis-up.png" type="Texture" id=27]
[ext_resource path="res://recursos/botones/once-down.png" type="Texture" id=28]
[ext_resource path="res://recursos/botones/dos-down.png" type="Texture" id=29]
[ext_resource path="res://recursos/botones/nueve-down.png" type="Texture" id=30]
[ext_resource path="res://recursos/botones/uno-up.png" type="Texture" id=31]
[ext_resource path="res://recursos/botones/dos-up.png" type="Texture" id=32]
[ext_resource path="res://recursos/botones/uno-down.png" type="Texture" id=33]
[ext_resource path="res://scripts/Niveles.gd" type="Script" id=34]
[ext_resource path="res://recursos/RuthSignature-PersonalUse.otf" type="DynamicFontData" id=35]
[ext_resource path="res://recursos/botones/dieciocho-up.png" type="Texture" id=36]
[ext_resource path="res://recursos/botones/diecisiete-up.png" type="Texture" id=37]
[ext_resource path="res://recursos/botones/dieciocho-down.png" type="Texture" id=38]
[ext_resource path="res://recursos/botones/diecinueve-up.png" type="Texture" id=39]
[ext_resource path="res://recursos/botones/veinticuatro-down.png" type="Texture" id=40]
[ext_resource path="res://recursos/botones/veintidos-up.png" type="Texture" id=41]
[ext_resource path="res://recursos/botones/veinte-down.png" type="Texture" id=42]
[ext_resource path="res://recursos/botones/veintiuno-down.png" type="Texture" id=43]
[ext_resource path="res://recursos/botones/veintiuno-up.png" type="Texture" id=44]
[ext_resource path="res://recursos/botones/diecinueve-down.png" type="Texture" id=45]
[ext_resource path="res://recursos/botones/veinte-up.png" type="Texture" id=46]
[ext_resource path="res://recursos/botones/veintidos-down.png" type="Texture" id=47]
[ext_resource path="res://recursos/botones/veinticuatro-up.png" type="Texture" id=48]
[ext_resource path="res://recursos/botones/veintitres-down.png" type="Texture" id=49]
[ext_resource path="res://recursos/botones/veintitres-up.png" type="Texture" id=50]
[ext_resource path="res://recursos/uyuni.jpeg" type="Texture" id=51]
[ext_resource path="res://recursos/musica/espera.ogg" type="AudioStream" id=52]
[ext_resource path="res://recursos/botones/candados.png" type="Texture" id=53]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=2]
size = 130
font_data = ExtResource( 35 )

[node name="Niveles" type="Node2D"]
script = ExtResource( 34 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -22.0
margin_top = 1035.0
margin_right = 747.0
margin_bottom = 1275.0
color = Color( 0.952941, 0.952941, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 361.92, 531.566 )
scale = Vector2( 0.967361, 0.967361 )
texture = ExtResource( 51 )

[node name="Label" type="Label" parent="."]
margin_left = 210.718
margin_top = 7.07111
margin_right = 319.718
margin_bottom = 107.071
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Niveles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.4, 0.4 )

[node name="VSlider" type="ScrollContainer" parent="Node2D"]
margin_left = 10.4428
margin_top = 332.978
margin_right = 1384.0
margin_bottom = 2244.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/VSlider"]
margin_right = 1361.56
margin_bottom = 2428.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_right = 1361.0
margin_bottom = 300.0
size_flags_horizontal = 15
size_flags_vertical = 15
alignment = 1

[node name="Button" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 33 )
texture_disabled = ExtResource( 53 )

[node name="Button2" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
size_flags_vertical = 0
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 29 )
texture_disabled = ExtResource( 53 )

[node name="Button3" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 15 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 304.0
margin_right = 1361.0
margin_bottom = 604.0
alignment = 1

[node name="Button4" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer2"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 53 )

[node name="Button5" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer2"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 53 )

[node name="Button6" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer2"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 608.0
margin_right = 1361.0
margin_bottom = 908.0
alignment = 1

[node name="Button7" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer3"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 53 )

[node name="Button8" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer3"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 53 )

[node name="Button9" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer3"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 912.0
margin_right = 1361.0
margin_bottom = 1212.0
alignment = 1

[node name="Button10" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer4"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 53 )

[node name="Button11" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer4"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 1 )
texture_disabled = ExtResource( 53 )

[node name="Button12" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer4"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 19 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 1216.0
margin_right = 1361.0
margin_bottom = 1516.0
alignment = 1

[node name="Button13" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer5"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 23 )
texture_disabled = ExtResource( 53 )

[node name="Button14" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer5"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 53 )

[node name="Button15" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer5"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer6" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 1520.0
margin_right = 1361.0
margin_bottom = 1820.0
alignment = 1

[node name="Button16" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer6"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_disabled = ExtResource( 53 )

[node name="Button17" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer6"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 37 )
texture_disabled = ExtResource( 53 )

[node name="Button18" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer6"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 36 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer7" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 1824.0
margin_right = 1361.0
margin_bottom = 2124.0
alignment = 1

[node name="TextureButton19" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer7"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 45 )
texture_pressed = ExtResource( 39 )
texture_disabled = ExtResource( 53 )

[node name="TextureButton20" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer7"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 42 )
texture_disabled = ExtResource( 53 )

[node name="TextureButton21" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer7"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 44 )
texture_disabled = ExtResource( 53 )

[node name="HBoxContainer8" type="HBoxContainer" parent="Node2D/VSlider/VBoxContainer"]
margin_top = 2128.0
margin_right = 1361.0
margin_bottom = 2428.0
alignment = 1

[node name="TextureButton22" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer8"]
margin_left = 226.0
margin_right = 526.0
margin_bottom = 300.0
texture_normal = ExtResource( 41 )
texture_pressed = ExtResource( 47 )
texture_disabled = ExtResource( 53 )

[node name="TextureButton23" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer8"]
margin_left = 530.0
margin_right = 830.0
margin_bottom = 300.0
texture_normal = ExtResource( 50 )
texture_pressed = ExtResource( 49 )
texture_disabled = ExtResource( 53 )

[node name="TextureButton24" type="TextureButton" parent="Node2D/VSlider/VBoxContainer/HBoxContainer8"]
margin_left = 834.0
margin_right = 1134.0
margin_bottom = 300.0
texture_normal = ExtResource( 40 )
texture_pressed = ExtResource( 48 )
texture_disabled = ExtResource( 53 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 52 )
autoplay = true

[node name="Label2" type="Label" parent="."]
margin_left = -2.31779
margin_top = 885.298
margin_right = 549.682
margin_bottom = 1015.3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.305882, 0.878431, 0.0823529, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.105882, 0.254902, 0.321569, 1 )
custom_constants/shadow_offset_x = -4
custom_constants/shadow_offset_y = -2
custom_constants/shadow_as_outline = -1
text = "PANDEBOL 2020"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer2/Button4" to="." method="_on_Button4_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer2/Button5" to="." method="_on_Button5_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer2/Button6" to="." method="_on_Button6_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer3/Button7" to="." method="_on_Button7_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer3/Button8" to="." method="_on_Button8_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer3/Button9" to="." method="_on_Button9_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer4/Button10" to="." method="_on_Button10_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer4/Button11" to="." method="_on_Button11_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer4/Button12" to="." method="_on_Button12_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer5/Button13" to="." method="_on_Button13_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer5/Button14" to="." method="_on_Button14_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer5/Button15" to="." method="_on_Button15_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer6/Button16" to="." method="_on_Button16_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer6/Button17" to="." method="_on_Button17_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer6/Button18" to="." method="_on_Button18_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer7/TextureButton19" to="." method="_on_TextureButton19_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer7/TextureButton20" to="." method="_on_TextureButton20_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer7/TextureButton21" to="." method="_on_TextureButton21_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer8/TextureButton22" to="." method="_on_TextureButton22_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer8/TextureButton23" to="." method="_on_TextureButton23_button_up"]
[connection signal="button_up" from="Node2D/VSlider/VBoxContainer/HBoxContainer8/TextureButton24" to="." method="_on_TextureButton24_button_up"]
